# mcp-rust-sdk

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: websocket_client.rs  websocket_server.rs
src/: error.rs  lib.rs  protocol.rs  types.rs
src/client/: mod.rs
src/server/: mod.rs
src/transport/: mod.rs  stdio.rs  websocket.rs
