[package]
name = "mcp-rust-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for the Model Context Protocol (MCP)"
license = "MIT"
repository = "https://github.com/codeium/ModelContextMachine"
documentation = "https://github.com/codeium/ModelContextMachine/tree/main/mcp-rust-sdk"
keywords = ["mcp", "sdk", "protocol", "machine-learning", "ai"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
futures = "0.3"
bytes = "1.0"
tracing = "0.1"
url = "2.5"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"

[[example]]
name = "websocket_client"
path = "examples/websocket_client.rs"

[[example]]
name = "websocket_server"
path = "examples/websocket_server.rs"
